header alignment fix in mobile

--- a/src/styles/general.less
+++ b/src/styles/general.less
@@ -165,9 +165,6 @@ input {
       margin-top: 5px;
       margin-bottom: 0px;      
     }
-    .summit-text--no-logo {
-      margin-top: 10px;
-    }
   }
 }
 
@@ -567,6 +564,14 @@ input {
     width: 80%;
     margin-top: 15px;
     padding-left: 15px;
+    .summit-info {
+      .summit-text--no-logo {
+        margin-top: 0px;
+      }
+    }    
+    &--no-logo {
+      margin-top: 0px; 
+    }
   }
 
   .header-user {
